Fixed z-index menu bug

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -139,6 +139,7 @@ nav {
 		padding: 4em 2em;
 		height: 100vh;
 		width: 80vw;
+		z-index: 100;
 	}
 }
 
@@ -151,6 +152,7 @@ nav {
 		padding: 4em 2em;
 		height: 100vh;
 		width: 80vw;
+		z-index: 100;
 	}
 
 	100% {
