--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -27,7 +27,7 @@
 }
 
 #particles-js > canvas {
-	z-index: 1000;
+	z-index: 10;
 	// height: 20em !important;
 	height: 100% !important;
 }
